feat(domain): complete transition to natural business keys and eliminate Client entity from API
- Supplement the Ubiquitous Language glossary in USE_CASES_RU.md with Master Competence Matrix terms
- Integrate Stage 0 (Qualification Validation) into Scenario 3 and append Variant 4 to Scenario 5 for dynamic skill administration inside Vaadin UI
- Add the `ALIAS` column to the `MASTERS` table in schema.sql as a mandatory unique natural business key
- Add the `TICKET_CODE` column and optimal foreign key performance indexes (`CLIENT_ID`, `SERVICE_ID`) to the `APPOINTMENTS` table in schema.sql
- Refactor `CatalogService`, `Appointment`, and `Master` domain records in `salon-api` to remove all surrogate `Long ID` references
- Completely delete the `Client.java` domain record from `salon-api` to prevent abstraction leakage and enforce strict encapsulation boundaries
- Upgrade `BookingService` and `ShiftSchedulerService` interface signatures to operate exclusively on string-based natural business keys
- Refactor `BookingServiceImpl` to encapsulate a high-performance transactional cross-join query that maps incoming business strings to surrogate database IDs in a single pass
- Re-implement `txIdOrCreateClientInternal` in `BookingServiceImpl` using a declarative, functional pipeline that normalizes client names and securely returns internal IDs within transaction boundaries
- Rewrite `BookingToolsImpl` in `salon-ai-engine` to utilize бесцифровые строковые контракты, dropping primitive IDs from function-calling specifications
- Refactor `BookingServiceImplTest` and `ShiftSchedulerServiceIntegrationTest` to fulfill all unique data constraints under the H2 database engine
- Rewrite `BookingToolsImplTest` using an optimized, static `@BeforeAll` component injection context managed via a manual Avaje `BeanScope` container builder